// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`warm start reference cases (model 1.2.0) > case R (real profile) 1`] = `
{
  "activity": {
    "activities": [
      {
        "durationMin": 55,
        "intensity": "moderate",
        "sessionsPerWeek": 4,
        "type": "strength",
      },
    ],
    "anyStepDominant": false,
    "exerciseKcalAfterOverlap": 93.5,
    "exerciseNetKcalBeforeOverlap": 93.5,
    "netStepKcal": 313.208,
    "occupation": "seated",
    "overlapRemovedKcal": 0,
    "palBoundary": {
      "adjacentCategory": "active",
      "boundary": 1.68,
      "distancePal": 0.016272,
      "nasemDeltaKcal": 138.78,
    },
    "palBoundaryFlag": true,
    "physicalOccupationFloorApplied": false,
    "postureKcal": 0,
    "provisionalPal": 1.663728,
    "stepsPerDay": 9400,
    "walkingPace": "normal",
  },
  "confidenceDetail": {
    "kind": "warm_start",
    "maxRatio": 0.75,
    "mediumReached": false,
    "priorWidthKcal": 710.364033,
    "ratio": 0.907188,
    "widthKcal": 644.433803,
  },
  "gate": {
    "criteria": [
      {
        "fill": 0,
        "have": 0,
        "key": "weighIns",
        "met": false,
        "need": 5,
      },
      {
        "fill": 0,
        "have": 0,
        "key": "span",
        "met": false,
        "need": 14,
      },
      {
        "fill": 0,
        "have": 0,
        "key": "cleanWeighIns",
        "met": false,
        "need": 4,
      },
      {
        "fill": 0,
        "have": 0,
        "key": "adherence",
        "met": false,
        "need": 0.5,
      },
    ],
    "met": false,
    "metCount": 0,
    "remainingDays": 14,
    "remainingWeighIns": 5,
  },
  "goal": {
    "appliedKgPerWeek": 0.68,
    "appliedWeeklyRate": 0.01,
    "goal": "loss",
    "guardrailMaxRate": 0.01,
    "limitingRule": null,
    "rateAdjusted": false,
    "rejections": [],
    "requestedKgPerWeek": 0.68,
    "requestedWeeklyRate": 0.01,
    "selectableLimit": {
      "guardrailMaxRate": 0.01,
      "limitedBy": null,
      "maxSelectableRate": 0.01,
    },
    "targetWeightKg": 60,
  },
  "hall": {
    "activityParameterClamped": false,
    "activityParameterKcalPerKgDay": 7.336112,
    "baselineCarbFraction": 0.482397,
    "baselineIntakeKcal": 2074.006272,
    "baselineRmrKcal": 1367.75,
    "bodyWeightKg": 68,
    "initialFatSource": "jackson_2002",
  },
  "history": {
    "conflict": false,
    "conflictZ": -1.446836,
    "evidence": {
      "activityComparable": true,
      "averageCaloriesKcal": 1450,
      "durationDays": 14,
      "endWeightKg": 68,
      "evidenceVersion": 1,
      "recordedOn": "2026-09-14",
      "startWeightKg": 68,
      "trackingQuality": "high",
    },
    "exactMinusLinearisedKcal": 222.913224,
    "exactRoot": {
      "coherenceIntervalKg": [
        -4.447616,
        1.399727,
      ],
      "distanceToBoundKcal": -393.951226,
      "position": "inside_support",
      "rootOffsetKcal": -806.048774,
    },
    "fusedInterval80": [
      1754.410388,
      2398.844191,
    ],
    "fusedMedianKcal": 2074.006272,
    "hallDomain": {
      "argmaxMinusDeltaClampKcal": -68.672222,
      "deltaClampOffsetKcal": -736.327778,
      "excludedOffsetCount": 0,
      "likelihoodArgmaxOffsetKcal": -805,
      "minAdmissibleBaselineIntakeKcal": 1,
      "supportExcludedOffsetCount": 149,
    },
    "historyOnly": {
      "interval80": [
        1086.503633,
        2167.607683,
      ],
      "interval95": [
        902.478965,
        2551.675882,
      ],
      "medianKcal": 1549.364316,
      "sdKcal": 426.072929,
    },
    "historyOnlyEdgeMass": {
      "evidenceSupport": {
        "lower10": 0,
        "lower5": 0,
        "upper10": 0,
        "upper5": 0,
      },
      "grid": {
        "lower10": 0.030936,
        "lower5": 0.014817,
        "upper10": 0.000119,
        "upper5": 0.000056,
      },
    },
    "incoherent": false,
    "linearised": {
      "offsetKcal": -929.598908,
      "sdKcal": 568.38259,
    },
    "populationTdeeAtStartKcal": 2256.05,
    "status": "used",
    "uncertainty": {
      "activitySdKcal": 0,
      "endpointWeightSdKg": 0.848528,
      "intakeSdKcal": 145,
      "modelSdKcal": 100,
    },
  },
  "integrity": null,
  "maintenance": {
    "confidence": "low",
    "interval80": [
      1754.410388,
      2398.844191,
    ],
    "interval95": [
      1588.445563,
      2572.263032,
    ],
    "kcal": 2074.006272,
    "personalOffsetKcal": -182.043728,
    "source": "warm_start",
  },
  "matchesStoredPlan": null,
  "modelVersion": "1.3.0",
  "population": {
    "baseSigmaKcal": 241,
    "interval80": [
      1900.867984,
      2611.232016,
    ],
    "interval95": [
      1712.836,
      2799.264,
    ],
    "palCategory": "low_active",
    "sigmaKcal": 277.15,
    "sigmaMultipliers": [
      {
        "factor": 1.15,
        "reason": "palBoundaryFlag",
      },
    ],
    "sigmaReasons": [
      "palBoundaryFlag",
    ],
    "tdeeKcal": 2256.05,
    "weightKg": 68,
  },
  "prescription": {
    "calorieTargetKcal": 1405.187988,
    "macroFeasible": true,
    "macros": {
      "carbsG": 133.080523,
      "fatG": 46.8396,
      "proteinG": 112.827375,
    },
    "macrosDisplay": {
      "carbsG": 134,
      "fatG": 47,
      "proteinG": 113,
    },
    "proteinRule": "loss_resistance_1_8",
    "stepTarget": 9400,
    "stepsAdjusted": false,
  },
  "ree": {
    "athleteLike": false,
    "disagreementFlag": false,
    "kcal": 1367.75,
    "measuredRmr": "absent",
    "method": "mifflin_st_jeor",
    "reason": "general_adult",
  },
  "safety": {
    "atHardFloor": false,
    "belowRee": false,
    "energyAvailability": {
      "kcalPerKgFfm": null,
      "status": "not_applicable",
    },
    "floorMarginKcal": 205.187988,
    "hardFloorKcal": 1200,
    "warnings": {
      "belowRee": false,
      "gainWithoutResistance": false,
      "lowCarbForEndurance": false,
      "lowCarbForResistance": false,
      "lowEnergyAvailability": false,
    },
  },
  "scaleVariationKcalPerDay": 225.167287,
  "signals": [
    "pal_boundary",
    "low_confidence",
  ],
  "solve": {
    "calorieTargetKcal": 1405.187988,
    "converged": true,
    "horizonDays": 42,
    "iterations": 14,
    "targetWeightAtHorizonKg": 64.02065,
    "weightAtHorizonKg": 64.018716,
  },
  "sources": {
    "historyWeight": 0.178678,
    "theoreticalWeight": 0.821322,
  },
  "storedPlanModelVersion": null,
  "thresholds": {
    "conflictZ": 2,
    "energyAvailabilityKcalPerKgFfm": 30,
    "incoherentOffsetBoundKcal": 1200,
    "rangeRoundingKcal": 50,
    "scaleVariationExampleKg": 0.5,
  },
}
`;

exports[`warm start reference cases (model 1.2.0) > case S (synthetic 5-session variant) 1`] = `
{
  "activity": {
    "activities": [
      {
        "durationMin": 55,
        "intensity": "moderate",
        "sessionsPerWeek": 5,
        "type": "strength",
      },
    ],
    "anyStepDominant": false,
    "exerciseKcalAfterOverlap": 116.875,
    "exerciseNetKcalBeforeOverlap": 116.875,
    "netStepKcal": 313.208,
    "occupation": "seated",
    "overlapRemovedKcal": 0,
    "palBoundary": {
      "adjacentCategory": "low_active",
      "boundary": 1.68,
      "distancePal": -0.002717,
      "nasemDeltaKcal": -138.78,
    },
    "palBoundaryFlag": true,
    "physicalOccupationFloorApplied": false,
    "postureKcal": 0,
    "provisionalPal": 1.682717,
    "stepsPerDay": 9400,
    "walkingPace": "normal",
  },
  "confidenceDetail": {
    "kind": "warm_start",
    "maxRatio": 0.75,
    "mediumReached": false,
    "priorWidthKcal": 710.364033,
    "ratio": 0.913946,
    "widthKcal": 649.234393,
  },
  "gate": {
    "criteria": [
      {
        "fill": 0,
        "have": 0,
        "key": "weighIns",
        "met": false,
        "need": 5,
      },
      {
        "fill": 0,
        "have": 0,
        "key": "span",
        "met": false,
        "need": 14,
      },
      {
        "fill": 0,
        "have": 0,
        "key": "cleanWeighIns",
        "met": false,
        "need": 4,
      },
      {
        "fill": 0,
        "have": 0,
        "key": "adherence",
        "met": false,
        "need": 0.5,
      },
    ],
    "met": false,
    "metCount": 0,
    "remainingDays": 14,
    "remainingWeighIns": 5,
  },
  "goal": {
    "appliedKgPerWeek": 0.68,
    "appliedWeeklyRate": 0.01,
    "goal": "loss",
    "guardrailMaxRate": 0.01,
    "limitingRule": null,
    "rateAdjusted": false,
    "rejections": [],
    "requestedKgPerWeek": 0.68,
    "requestedWeeklyRate": 0.01,
    "selectableLimit": {
      "guardrailMaxRate": 0.01,
      "limitedBy": null,
      "maxSelectableRate": 0.01,
    },
    "targetWeightKg": 62,
  },
  "hall": {
    "activityParameterClamped": false,
    "activityParameterKcalPerKgDay": 8.847458,
    "baselineCarbFraction": 0.493753,
    "baselineIntakeKcal": 2188.196797,
    "baselineRmrKcal": 1367.75,
    "bodyWeightKg": 68,
    "initialFatSource": "jackson_2002",
  },
  "history": {
    "conflict": false,
    "conflictZ": -1.67858,
    "evidence": {
      "activityComparable": true,
      "averageCaloriesKcal": 1450,
      "durationDays": 14,
      "endWeightKg": 68,
      "evidenceVersion": 1,
      "recordedOn": "2026-09-14",
      "startWeightKg": 68,
      "trackingQuality": "high",
    },
    "exactMinusLinearisedKcal": 256.222706,
    "exactRoot": {
      "coherenceIntervalKg": [
        -4.699054,
        0.854372,
      ],
      "distanceToBoundKcal": -255.170242,
      "position": "inside_support",
      "rootOffsetKcal": -944.829758,
    },
    "fusedInterval80": [
      1865.714105,
      2514.948498,
    ],
    "fusedMedianKcal": 2188.196797,
    "hallDomain": {
      "argmaxMinusDeltaClampKcal": -69.892222,
      "deltaClampOffsetKcal": -875.107778,
      "excludedOffsetCount": 0,
      "likelihoodArgmaxOffsetKcal": -945,
      "minAdmissibleBaselineIntakeKcal": 1,
      "supportExcludedOffsetCount": 122,
    },
    "historyOnly": {
      "interval80": [
        1087.227932,
        2164.821162,
      ],
      "interval95": [
        903.548726,
        2547.422032,
      ],
      "medianKcal": 1548.769496,
      "sdKcal": 424.673417,
    },
    "historyOnlyEdgeMass": {
      "evidenceSupport": {
        "lower10": 0,
        "lower5": 0,
        "upper10": 0,
        "upper5": 0,
      },
      "grid": {
        "lower10": 0.048634,
        "lower5": 0.023781,
        "upper10": 0.000062,
        "upper5": 0.000029,
      },
    },
    "incoherent": false,
    "linearised": {
      "offsetKcal": -1102.28321,
      "sdKcal": 585.916038,
    },
    "populationTdeeAtStartKcal": 2394.83,
    "status": "used",
    "uncertainty": {
      "activitySdKcal": 0,
      "endpointWeightSdKg": 0.848528,
      "intakeSdKcal": 145,
      "modelSdKcal": 100,
    },
  },
  "integrity": null,
  "maintenance": {
    "confidence": "low",
    "interval80": [
      1865.714105,
      2514.948498,
    ],
    "interval95": [
      1697.620073,
      2689.110908,
    ],
    "kcal": 2188.196797,
    "personalOffsetKcal": -206.633203,
    "source": "warm_start",
  },
  "matchesStoredPlan": null,
  "modelVersion": "1.3.0",
  "population": {
    "baseSigmaKcal": 241,
    "interval80": [
      2039.647984,
      2750.012016,
    ],
    "interval95": [
      1851.616,
      2938.044,
    ],
    "palCategory": "active",
    "sigmaKcal": 277.15,
    "sigmaMultipliers": [
      {
        "factor": 1.15,
        "reason": "palBoundaryFlag",
      },
    ],
    "sigmaReasons": [
      "palBoundaryFlag",
    ],
    "tdeeKcal": 2394.83,
    "weightKg": 68,
  },
  "prescription": {
    "calorieTargetKcal": 1502.819824,
    "macroFeasible": true,
    "macros": {
      "carbsG": 150.166094,
      "fatG": 50.093994,
      "proteinG": 112.827375,
    },
    "macrosDisplay": {
      "carbsG": 150,
      "fatG": 50,
      "proteinG": 113,
    },
    "proteinRule": "loss_resistance_1_8",
    "stepTarget": 9400,
    "stepsAdjusted": false,
  },
  "ree": {
    "athleteLike": false,
    "disagreementFlag": false,
    "kcal": 1367.75,
    "measuredRmr": "absent",
    "method": "mifflin_st_jeor",
    "reason": "general_adult",
  },
  "safety": {
    "atHardFloor": false,
    "belowRee": false,
    "energyAvailability": {
      "kcalPerKgFfm": null,
      "status": "not_applicable",
    },
    "floorMarginKcal": 302.819824,
    "hardFloorKcal": 1200,
    "warnings": {
      "belowRee": false,
      "gainWithoutResistance": false,
      "lowCarbForEndurance": false,
      "lowCarbForResistance": false,
      "lowEnergyAvailability": false,
    },
  },
  "scaleVariationKcalPerDay": 232.838986,
  "signals": [
    "pal_boundary",
    "low_confidence",
  ],
  "solve": {
    "calorieTargetKcal": 1502.819824,
    "converged": true,
    "horizonDays": 42,
    "iterations": 14,
    "targetWeightAtHorizonKg": 64.02065,
    "weightAtHorizonKg": 64.02093,
  },
  "sources": {
    "historyWeight": 0.166174,
    "theoreticalWeight": 0.833826,
  },
  "storedPlanModelVersion": null,
  "thresholds": {
    "conflictZ": 2,
    "energyAvailabilityKcalPerKgFfm": 30,
    "incoherentOffsetBoundKcal": 1200,
    "rangeRoundingKcal": 50,
    "scaleVariationExampleKg": 0.5,
  },
}
`;
